# quantTrader

./: .dockerignore  .env.example  .gitignore  Dockerfile  E2E_TEST_GUIDE.md  INDEX.md  Jenkinsfile  KNOWN_LIMITATIONS.md  QUICKSTART.md  README.md  SETUP_SUMMARY.md  TESTING_CHECKLIST.md  TROUBLESHOOTING.md  config.db.example.json  config.miniQMT.example.json  diagnose_trader.py  insert_test_signal.py  pyproject.toml  requirements-dev.txt  requirements.txt  show_log_location.py
.github/workflows/: ci.yml
sim/: README.md  __init__.py  matching_engine.py  run_simulated_quant_trader.py  state_restore.py
sim/fake_xtquant/xtquant/: __init__.py  xtconstant.py  xttrader.py  xttype.py
src/quant_trader/: api_client.py  broker_base.py  broker_miniQMT.py  broker_simulated.py  cli.py  client_factory.py  config.py  execution_tracker.py  fee_model.py  mongo_trader_client.py  position_cli.py  position_manager.py  trader_loop.py
tests/e2e/: conftest.py  test_miniqmt_sim_e2e.py  test_miniqmt_sim_multi_account_e2e.py
tests/trader/: test_broker_miniqmt.py  test_cleanup_endpoint.py  test_engine_registry.py  test_execution_tracker.py  test_mongo_trader_client.py  test_position_sync.py  test_sim_state_restore.py  test_simulated_runtime_seed.py  test_trader_config_load.py  test_trader_loop_execution.py
