[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantTrader"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.25.0",
    "pymongo>=4.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests using fake external dependencies",
]
